--- a/calorie_tracker/templates/landing.html
+++ b/calorie_tracker/templates/landing.html
@@ -196,8 +196,8 @@ function showInstallNotification() {
 }
 
 // Register service worker
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('{{ url_for("static", filename="js/service-worker.js") }}');
+  if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('{{ url_for("serve_sw") }}');
 }
 </script>
 </body>
